--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "swiper": "^11.1.14"
