fix: fix vercel issue

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-date-range": "^1.4.9",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "firebase": "^10.13.2",
