--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.0",
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
     "framer-motion": "^11.8.0",
