--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,13 @@
     "date-fns": "^4.1.0",
     "firebase": "^10.13.2",
     "framer-motion": "^11.8.0",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sweetalert2": "^11.6.13",
