--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.1.9",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.8.0",
     "@tanstack/react-query": "^5.59.8",
     "@types/react-date-range": "^1.4.9",
+    "@zegocloud/zego-uikit-prebuilt": "^2.11.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "firebase": "^10.13.2",
@@ -26,6 +29,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "sweetalert2": "^11.14.3",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
