--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "stripe": "^17.2.0",
     "sweetalert2": "^11.6.13",
     "swiper": "^11.1.14"
   },
