--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
