--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "nodemailer": "^6.9.15",
+    "socket.io": "^4.8.0",
     "stripe": "^17.2.0"
   }
 }
