--- a/client/package.json
+++ b/client/package.json
@@ -21,9 +21,11 @@
     "date-fns": "^4.1.0",
     "firebase": "^10.13.2",
     "framer-motion": "^11.8.0",
+    "lottie-react": "^2.4.0",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-content-loader": "^7.0.2",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
